--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Bob201a.GitHub.com by bob201a</title>
   </head>
   <body>
-    HelloWorld bob201a
+    <a href="bob201a.github.io/html5/index.html">test</a>
   </body>
 </html>
