--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Bob201a.GitHub.com by bob201a</title>
+    <title>uiodasn</title>
   </head>
   <body>
     <a href="html5/index.html">test</a>
