--- a/html5/index.html
+++ b/html5/index.html
@@ -2,12 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>uiodasnflmasdfjduoaisdfn</title>
-    <link rel="icon" type="image/GIF" href="res/favicon.ico"/>
+    <title>Cocos2d-html5 Hello World test</title>
+    <!-- link rel="icon" type="image/GIF" href="res/favicon.ico"/-->
+    <meta name="viewport"
+          content="user-scalable=no, width=device-width, height=device-height, target-densitydpi=device-dpi"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="full-screen" content="yes"/>
+    <meta name="browsermode" content="application"/>
     <meta name="screen-orientation" content="portrait"/>
     <meta name="x5-fullscreen" content="true"/>
+    <meta name="x5-orientation" content="portrait"/>
     <meta name="360-fullscreen" content="true"/>
     <style>
         body, canvas, div {
@@ -19,9 +23,10 @@
         }
     </style>
 </head>
-<body style="padding:0; margin: 0;">
+<body style="padding:0; margin: 0; background: #AAAAAA;"> 
+<script src="res/loading.js"></script>
 <canvas id="gameCanvas"></canvas>
 
-<script src="game.min.js"></script>
+<script cocos src="game.min1.js"></script>
 </body>
 </html>
